# vasp-workflows

./: .gitignore  .ruff.toml  CLAUDE.md  README.md  Snakefile  main.py  pyproject.toml
.github/instructions/: commit-standards.instructions.md  python-docstrings.instructions.md
docs/source/: conf.py  index.rst
docs/source/formation_energy/: calc_formation.rst  index.rst
src/vasp_snake/: cell.py  collect_info.py  magnetization.py  potcar.py  report.py  report_status.py  restart.py  task.py  workflow.py
src/vasp_wfl/: cell.py  collect_info.py  collinear.py  dirs.py  disk_cloud.py  energy.py  force.py  formation.py  incar.py  logger.py  magnetization.py  poscar.py  potcar.py  report.py  restart.py  spglib.py  templating.py  workdir.py  workflow.py
tools/: create_interactive_element_cloud.py  plot_element_word_cloud.py
vasp_snake/src/: force.py  report_status.py
