[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vasp-snakemake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8",
    "pandas>=2.2.3",
    "pymatgen>=2025",
    "pyyaml>=6",
]
[tool.pyrefly]
project_includes = ["**/*"]
project_excludes = [
    "**/.[!/.]*",
    "**/*venv/**/*",
]

[dependency-groups]
dev = [
    "directory-tree>=1.0.0",
    "icecream>=2.1.4",
    "ipython>=9.2.0",
    "rich>=14.0.0",
    "see>=1.4.1",
]

[project.scripts]
vsn = "vasp_snake.workflow:cli"
