[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vasp-workflows"
version = "0.1.0"
description = "VASP workflows used in our group"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8",
    "pandas>=2.2.3",
    "pymatgen>=2025",
    "pyyaml>=6",
]
[tool.pyrefly]
project_includes = ["**/*"]
project_excludes = [
    "**/.[!/.]*",
    "**/*venv/**/*",
]

[dependency-groups]
dev = [
    "directory-tree>=1.0.0",
    "icecream>=2.1.4",
    "ipython>=9.2.0",
    "rich>=14.0.0",
    "see>=1.4.1",
]
doc = [
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-press-theme>=0.9.1",
]

[project.scripts]
vsn = "vasp_wfl.workflow:cli"
